add package new name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-friday",
-  "homepage": "https://KirillHtml5.github.io/friday",
+  "name": "my-friday-for-me",
+  "homepage": "https://KirillHtml5.github.io/my-friday-for-me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
